Updating, added logs, there is this problem with handling of failed validation.